# AESSP

./: .gitignore  README.md  pyproject.toml
aessp/: __init__.py  io.py
aessp/api/: __init__.py  cache.py  crossref.py  ncbi.py  rate_limit.py
aessp/extraction/: __init__.py  mentions.py
aessp/scoring/: __init__.py  score.py
aessp/validation/: __init__.py  catpred.py
configs/: literature_queries.yaml  protein_queries.yaml  scoring_weights.yaml  substrates.yaml
docs/: DATA_SCHEMA.md  LIMITATIONS.md  METHODS.md  OPEN_SCIENCE_STRATEGY.md
scripts/: audit_first_batch.py  build_candidate_table.py  collect_literature.py  collect_proteins.py  export_catpred_fasta.py  extract_candidate_mentions.py  ingest_catpred_results.py  prepare_catpred_inputs.py  report_catpred_validation.py  score_candidates.py  validate_enzyme_candidates.py
tests/: test_cache_rate_limit.py  test_catpred_validation.py  test_conservative_pipeline.py  test_parsers_extraction_scoring.py
